# medical_cart

./: README.md
Nataly/: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
Nataly/.github/workflows/: ruff.yml
Nataly/project_progress/: 01_project_overview.md  02_plan.md  03_status.md  04_changelog.md  05_project_map.md
Nataly/scripts/debug/: check_model_cache.py  test_faster_whisper_simple.py
Nataly/scripts/servises/: copy_model_to_project.bat  copy_model_to_project.py  download_faster_whisper_model.bat  download_faster_whisper_model.py  download_ffmpeg.bat  fix_numpy.bat  recreate_venv.bat  run_bot.bat  test_cuda.py
Nataly/scripts/test/: benchmark_cuda.py  check_cuda.py  check_db.py  debug_env.py  download_fresh_model.py  minimal_crash_test.py  run_coverage.bat  run_tests.bat  test_ctranslate2.py  test_faster_whisper_direct.py  test_faster_whisper_gpu.bat  test_openai_key.bat  test_voce_cloud.py  test_voce_cpu.py  test_voce_simple.py  test_voce_small_model.py  test_voce_tiny_cpu.py
Nataly/src/: app.py
Nataly/src/bot/: __init__.py  router.py
Nataly/src/config/: settings.yaml
Nataly/src/core/: config.py  logging.py  storage.py
Nataly/src/domain/: models.py
Nataly/src/tg_audio_transcriber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Nataly/src/transcription/: audio_io.py  chunking.py  router.py
Nataly/tests/: test_audio_io.py  test_core_config.py  test_core_storage.py  test_diagnostic_properties.py  test_hashing.py  test_transcription_router_smoke.py  test_transcription_router_unit.py
medical_cart/: Script.sql  (+7 more)
(+7 files in other folders)
